results/SpecGenBench/2-shot/log-MatrixAdd-2023_11_28_11_19_50.txt
public class MatrixAdd {
    
    //@ requires a.length == 2 && a[0].length == 2 && b.length == 2 && b[0].length == 2;
    //@ ensures \result.length == 2 && \result[0].length == 2;
    //@ ensures \forall int i, j; 0 <= i && i < 2 && 0 <= j && j < 2; \result[i][j] == a[i][j] + b[i][j];
    public int[][] add(int[][] a, int[][] b) {
        int[][] c = new int[2][2];
        for (int i = 0; i < 2; i++) {
            for (int j = 0; j < 2; j++) {
                c[i][j] = a[i][j] + b[i][j];
            }
        }
        return c;
    }

}
/home/max/Documents/JMLGPT/tmp/MatrixAdd.java:10: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                c[i][j] = a[i][j] + b[i][j];
                  ^
  Reason: Double rewriting of ident: i i_387_387___37 i_387_401___40
1 error

